--- a/FlightApp/FlightApp/App.config
+++ b/FlightApp/FlightApp/App.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="FlightApp.Properties.Settings.FlightAppConnectionString"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\FlightApp.accdb"
+            providerName="System.Data.OleDb" />
+        <add name="FlightApp.Properties.Settings.FlightAppConnectionString1"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\ideliver\Desktop\Flight_Demo_Image\Database\FlightApp.accdb"
+            providerName="System.Data.OleDb" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
